Fix footer spacing

--- a/resources/assets/sass/layouts/_footer.scss
+++ b/resources/assets/sass/layouts/_footer.scss
@@ -1,3 +1,4 @@
 footer.page-footer {
+  padding: $spacer;
   width: 100%;
 }
